fix: button alignment

--- a/front/src/components/atoms/Container/styles.scss
+++ b/front/src/components/atoms/Container/styles.scss
@@ -17,7 +17,7 @@
 
 @media only screen and (min-width: 992px) {
   .container__wrapper {
-    width: 500px;
+    width: 400px;
     margin: 0 auto;
   }
 }
